# precision_pouring_upenn

./: LICENSE  README.md  pip_list.txt
liquid_level_detection/: CMakeLists.txt  package.xml  setup.py
liquid_level_detection/include/liquid_level_detection/: AbstractModel.hpp  GRANSAC.hpp  LineModel.hpp  LiquidHeightFluidTopAdjust.h
liquid_level_detection/launch/: bagplay_liquid_level_detect.launch  liquid_detect.launch
liquid_level_detection/records/: 2_13_pourAlg.ogv
liquid_level_detection/scripts/: Alter_Vid.py  Mixed_pour_line .py  Orig_plot_pour_line.py  SavePointopFloDetection.py  Save_Plot_pour 2142017.py  Single_plot_pour_lineL.py  Single_plot_pour_lineM.py  Single_plot_pour_lineR.py  detection.py  noYmotionopFloDetection (copy).py  opFloDetection.py  plot_pour_line.py  pouring_w_april.py  pouring_w_april_W2_22.py  pouring_w_april_main.py  pouring_w_april_main.py.orig
liquid_level_detection/src/: level_detect_node.cpp
liquid_level_detection_nn/: CMakeLists.txt  README.md  package.xml
liquid_level_detection_nn/docker/: Dockerfile  build.sh  run.sh  test.py
liquid_level_detection_nn/launch/: liquid_level_detect.launch
liquid_level_detection_nn/src/: detector.py  detector_no_docker.py  level_detect_node.cpp  model.py  socket_test.py
nn_predictors/: CMakeLists.txt  package.xml  setup.py
nn_predictors/models/: best_10x64_conv3x15.pt
nn_predictors/scripts/: wait_time_predictor.py
nn_predictors/srv/: GetWaitTime.srv
pouring_control_pkg/: CMakeLists.txt  package.xml  setup.py
pouring_control_pkg/bagfiles/: bag_topics.txt
pouring_control_pkg/bagfiles/read_bags/: pouring_bag_fig_gen.py
pouring_control_pkg/include/pouring_control_pkg/: basic_ros_include.h
pouring_control_pkg/launch/: debug_vis_launch.launch  goto_start.launch  gripper.launch  initialize.launch  main_pour_launch.launch  sawyer.rviz  scale_launch.launch  segway_base_teleop.launch
pouring_control_pkg/scripts/: go_to_start_pose.py  main.py  main_threaded.py  meas_state_node.py  move_head.py  pouring_model_test.py  pub_desired_height.py  reset_visual_tracking.sh  vis_end_effector_forces.py
pouring_control_pkg/scripts/figs/: readme.txt
pouring_control_pkg/src/: meas_state_node_vision_and_scale_kf.cpp
pouring_msgs/: CMakeLists.txt  package.xml
pouring_msgs/msg/: ContainerEdgeProfile.msg  GPEdgeProfileSelectedTrain.msg  GPVolumeModel.msg  Hfilt.msg  LDHeight.msg  MeasMsg.msg  PourAngStateMsg.msg  PourJoints.msg  PourModelPred.msg  PouringMsg.msg  PouringTimeDelay.msg  ScaleMsg.msg  ScanBoxMsg.msg  SelectedGPModels.msg  TrainingContainerEdgeProfile.msg
pouring_msgs/srv/: ClassifyContainer.srv  ContainerEdgeProfileSrv.srv  GPEdgeProfileGenerator.srv  PourPlatformControl.srv  PouringFrames.srv  PyOptimizationServ.srv  ShowFinalEdgeProfileSrv.srv
pouring_unknown_geom/: CMakeLists.txt  package.xml  readme_local.txt  setup.py
pouring_unknown_geom/action/: PourControl.action
pouring_unknown_geom/bagfiles/: .bag_play_debug.txt  README.md  make_vids.sh  make_vids_bag.sh  rename_example.txt  scp_bag.sh  time_delay_inspection.xml
pouring_unknown_geom/bagfiles/analysis_figs/: readme.txt
pouring_unknown_geom/classification/: README.md  classifier.p
pouring_unknown_geom/config/: point_grey_calib_16mm.yaml
pouring_unknown_geom/data/: coefficients.json  control_containers.txt
pouring_unknown_geom/data/000/: data_000_2017-06-28T12_31_48.json  data_000_2017-06-28T12_35_26.json  data_000_2017-06-28T12_36_32.json  data_000_2017-06-28T12_40_12.json  data_000_2017-06-28T12_41_12.json  data_000_2017-06-28T12_42_14.json  data_000_2017-06-28T12_47_43.json  data_000_2017-06-28T13_06_58.json  data_000_2017-06-28T13_19_44.json  data_000_2017-06-28T16_20_24.json  data_000_2017-06-28T16_21_48.json  data_000_2017-06-28T16_31_04.json  data_000_2017-06-28T16_42_03.json  data_000_2017-06-28T16_53_40.json  data_000_2017-06-28T17_01_25.json  data_000_2017-06-29T11_18_28.json  data_000_2017-06-29T12_35_00.json  data_000_2017-06-29T12_49_34.json  data_000_2017-06-29T12_56_33.json  data_000_2017-06-29T13_09_13.json  data_000_2017-06-29T13_19_33.json  data_000_2017-06-30T11_43_12.json  data_000_2017-06-30T11_48_44.json  (+1 more)
pouring_unknown_geom/launch/: arduino_scale.launch  camera_sensors_pico_elp.launch  container_profile_extractor.launch  debug_sawyer_launch.launch  flea_cam.launch  iiwa_system_launch.launch  make_video_bags.launch  model_selection_cpp_launch.launch  new_background_test.launch  new_gp_bagfile_generator.launch  pico_flexx_depth_camera_launch.launch  pose_estimator.launch  post_process.launch  pour_full_body.launch  pour_test.launch  pouring_complete.launch  pouring_complete_just_pour_no_scan.launch  pouring_complete_just_pour_no_scan_control.launch  pouring_complete_just_pour_no_scan_vision.launch  pouring_complete_just_scan_no_pour.launch  pouring_complete_sawyer.launch  pouring_head_vid.launch  pouring_model_identification.launch  save_images_launch.launch  sawyer_controller_launch.launch  sawyer_cup_ref_frame.rviz  sawyer_pour_launch.launch  sawyer_sim_launch.launch  store_pico_cam_output.launch  testparam.launch  warm_up_detector.launch
pouring_unknown_geom/msg/: HybCntrlData.msg  IsReady.msg  PourModelPred.msg  PourVolAng.msg  PredHeight.msg
pouring_unknown_geom/scripts/: command_full_joints.py  controller_video.py  gripper  iiwa_control_node.py  iiwa_motion.txt  intera_head_video.py  intera_head_video_old.py  main.py  model_selection_node.py  planning_scene_for_objective.py  post_process_script.py  pour_full_body.py  pouring_frames.py  proof.txt  pub_sor_pc.py  pub_volume_for_model.py  python_test_param.py  return_to_start_pour.py  run_simple_pour.py  sawyer_control_node.py  setup_motions.py  sleep_pose.py  test_action.py  test_script.py  test_sim_sawyer.py  test_vel.py  tf_test.py  visualize_model_pred.py
pouring_unknown_geom/src/: container_edge_profile_extractor_service.cpp  libgptest.cpp  model_selection_node_new_GP_enabled.cpp  repub_angle_vol_node.cpp
pouring_unknown_geom/srv/: ContainerEdgeProfileSrv.srv  PourPlatformControl.srv  ShowFinalEdgeProfileSrv.srv
(+5058 files in other folders)
